# tests/app/extensions/snapshots/openapi/om_inventory.json
@@ -4372,6 +4372,18 @@
             ],
             "title": "Last Error Code"
           },
+          "last_run_id": {
+            "anyOf": [
+              {
+                "format": "uuid",
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Last Run Id"
+          },
           "last_success_at": {
             "anyOf": [
               {
@@ -4889,6 +4901,18 @@
               }
             ],
             "title": "Last Error Code"
+          },
+          "last_run_id": {
+            "anyOf": [
+              {
+                "format": "uuid",
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Last Run Id"
           },
           "last_success_at": {
             "anyOf": [
